[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-simulator"
version = "0.1.0"
description = "Interactive vehicle handling simulator based on linear and nonlinear bicycle models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Anastasiia Kopaneva" }
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "plotly>=5.24",
  "scipy>=1.12",
  "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
